Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81701

QNX7 setNativeLocks failed: "Function not implemented"

XMLWordPrintable

    • QNX
    • 9ede07613dc5b7759f398d5a8839b2ffdb4675a2 (qt/qtbase/5.14) 52c0c4efccee5388b64ead635c7c973713e75318 (qt/qtbase/5.12)

      QNX7 doesn't have the flock implemented, so Qt shouldn't try to use it, otherwise it gives and error:

      setNativeLocks failed: "Function not implemented"
      

      The attached patch may solve the problem.

        1. qt5-qnx-lock.patch
          0.4 kB
          Karim Pinter
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes