QLockFile: Disable flock() on QNX

It appears it's not implemented.

[ChangeLog][QtCore][QLockFile] Suppressed the warning on QNX that said
'setNativeLocks failed: "Function not implemented"'. There is no
difference in behavior: Qt will continue not to be able to apply an OS-
level file lock, which means the lock could be accidentally stolen by
buggy software. Correct software using QLockFile should not be affected.

Fixes: QTBUG-81701
Change-Id: If79a52e476594446baccfffd15ee35bbac6c6e47
Reviewed-by: David Faure <david.faure@kdab.com>
(cherry picked from commit 9ede07613dc5b7759f398d5a8839b2ffdb4675a2)
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>