src/corelib/io/qlockfile_unix.cpp
@@ -58,6 +58,12 @@
 #include <sys/file.h>  // flock
 #endif
 
+#if defined(Q_OS_RTEMS) || defined(Q_OS_QNX)
+// flock() does not work in these OSes and produce warnings when we try to use
+#  undef LOCK_EX
+#  undef LOCK_NB
+#endif
+
 #include <sys/types.h> // kill
 #include <signal.h>    // kill
 #include <unistd.h>    // gethostname
